gcc/testsuite/rust/rustc/ui/unsized-locals/issue-50940.rs
fn main() {
    struct A<X: ?Sized>(X);
    A as fn(str) -> A<str>;
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

